--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
       uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-acces-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
-        aws_secret_access_key: ${{secrets.AWS_SECRET_ACCES_KEY}}
+        aws_secret_access_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
         aws_session_token: ${{secrets.AWS_SESION_TOKEN}}
         aws_region: "us-east-1"
 
