--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         aws-acces-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
         aws_secret_access_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-        aws_session_token: ${{secrets.AWS_SESION_TOKEN}}
+        aws_session_token: ${{secrets.AWS_SESSION_TOKEN}}
         aws_region: "us-east-1"
 
     - name: terraform init
